[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=2]
[ext_resource path="res://mods/TackleBox/scenes/mod_menu/mod_menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=4]

[node name="mods_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.0774691
margin_left = 29.872
margin_top = -0.200001
margin_right = 29.8719
margin_bottom = -0.200001
text = "Loaded Mods"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="sep" type="TextureRect" parent="Panel"]
anchor_top = 0.029321
anchor_right = 1.0
anchor_bottom = 0.0787037
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close" type="Button" parent="Panel"]
anchor_left = 0.979167
anchor_top = -0.0262346
anchor_right = 1.01417
anchor_bottom = 0.0257654
margin_left = -0.000366211
margin_top = 2.09808e-05
margin_right = -0.323853
margin_bottom = 6.30402
text = "X"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel2" type="Panel" parent="Panel"]
anchor_top = 0.0756173
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel2/ScrollContainer"]
margin_right = 1088.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
